correct show event comments in no user log in

--- a/templates/events/edit.html.twig
+++ b/templates/events/edit.html.twig
@@ -13,6 +13,6 @@
 
     {{ include('events/_form.html.twig') }}
 
-    <a href="{{ path('events') }}">back to list</a>
+    <a href="{{ path('events') }}">Liste des évènements</a>
 	</div>
 {% endblock %}
