--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -82,32 +82,6 @@ a:hover{
 	z-index: 5;
 }
 
-/* Header */
-
-a.navbar-brand{
-	padding: 0;
-}
-
-.logo{
-	width: 100px;
-}
-
-header{
-	background: $mainColor;
-}
-
-/* Footer */
-
-footer{
-	padding: 15px 10px;
-	background: $mainColor;
-	bottom: 0;
-
-	p{
-		margin-bottom: 0;
-	}
-}
-
 /* Index */
 
 .index-intro{
@@ -143,90 +117,26 @@ footer{
 	}
 }
 
-.edit-form{
-	.btn-danger{
-		margin-bottom: 2rem;
+
+/* Show event */
+
+.no-rate{
+	text-align: center;
+	font-size: 20px;
+}
+
+.rate-average{
+	text-align: center;
+
+	img{
+		width: 25px;
+		height: auto;
 	}
 }
 
-form{
-	.has-error{
-		ul{
-			list-style: none;
-			padding-left: 0;
-			li{
-				color: red;
-			}
-		}
-	}
-}
-
-.form-style{
-
-	input,select,textarea{
-		height: calc(1.5em + .75rem + 2px);
-		padding: .375rem .75rem;
-		font-size: 1rem;
-		font-weight: 400;
-		line-height: 1.5;
-		color:#495057;
-		background-color:#fff;
-		background-clip: padding-box;
-		border: 1px solid#ced4da;
-		border-radius: .25rem;
-		transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-	}
-
-	input[type="file"]{
-		background: none;
-		border:none;
-		padding-left: 0;
-	}
-
-	input,textarea{
-		display: block;
-		width: 100%;
-	}
-
-	textarea{
-		height: 100%;
-	}
-
-	.categories{
-		label, input{
-			display: inline-block;
-			height: inherit;
-			width: inherit;
-		}
-	}
-
-}
-
-.form-style-with-date{
-	.date{
-		#events_date{
-			#events_date_date,#events_date_time{
-				display: inline-block;
-			}
-
-			#events_date_date{
-				margin-right: 10px;
-			}
-
-			#events_date_time{
-				select{
-					margin-right: 5px;
-					margin-left: 5px;
-					&:first-child{
-						margin-left: 0;
-					}
-					&:last-child{
-						margin-right: 0;
-					}
-				}
-			}
-		}
-	}
-}
+@import '_header.scss';
+@import '_form.scss';
+@import '_review.scss';
+@import '_footer.scss';
 
 
