--- a/templates/comment/_send.html.twig
+++ b/templates/comment/_send.html.twig
@@ -1,4 +1,4 @@
-<form class="d-inline-block align-bottom card-link" method="post" action="{{ path('send_comment', {'id': event_id}) }}">
+<form class="form-style d-inline-block align-bottom card-link w-100" method="post" action="{{ path('send_comment', {'id': event_id}) }}">
 	<div class="form-row">
 		<div class="form-group col-md-12">
     		{{ form_row(form.comment) }}
