--- a/templates/categories/new.html.twig
+++ b/templates/categories/new.html.twig
@@ -1,10 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Categories{% endblock %}
+{% block title %}Nouvelle catégorie{% endblock %}
 
 {% block body_id 'new-category' %}
-
-{% block body_class 'form-style' %}
 
 {% block body %}
     <div class="container">
@@ -12,6 +10,6 @@
 
 	    {{ include('categories/_form.html.twig') }}
 
-	    <a href="{{ path('categories_index') }}">back to list</a>
+	    <a href="{{ path('categories_index') }}">Liste des catégories</a>
 	</div>
 {% endblock %}
