--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-	<div class="row flex align-center">
-		<div class="logo col sm-3"><img class="img-fluid logo" src="{{ asset('images/logo.png') }}" alt="Collectif"/></div>
-		<div class="col-sm-9"><p>&copy; Copyright Kevin LEONARD</p></div>
+	<div class="row flex align-center text-center">
+		{#<div class="logo col sm-3"><img class="img-fluid logo" src="{{ asset('images/logo.png') }}" alt="Collectif"/></div>#}
+		<div class="col-12"><p>&copy; Copyright Kevin LEONARD</p></div>
 	</div>
 </div>
