--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="{{ path('index')}}"><img class="img-fluid logo" src="{{ asset('images/logo.png') }}" alt="Collectif"/></a>
+  <a class="navbar-brand" href="{{ path('index')}}"><img class="logo mr-5" src="{{ asset('images/logo.png') }}" alt="Collectif"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
