--- a/templates/categories/edit.html.twig
+++ b/templates/categories/edit.html.twig
@@ -1,20 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Categories{% endblock %}
+{% block title %}Modifier une catégorie{% endblock %}
 
 {% block body_id 'edit-category' %}
 
-{% block body_class 'form-style' %}
-
 {% block body %}
     <div class="container">
-		<h1 class="text-center mb-5">Edit Categories</h1>
+		<h1 class="text-center mb-5">Modifier une catégorie</h1>
 
 	    {{ include('categories/_delete_form.html.twig') }}
 
-	    {{ include('categories/_form.html.twig', {'button_label': 'Update'}) }}
+	    {{ include('categories/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-	    <a href="{{ path('categories_index') }}">back to list</a>
+	    <a href="{{ path('categories_index') }}">Liste des catégories</a>
 	</div>
 
 {% endblock %}
