--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -19,17 +19,18 @@
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
                 <td>
-                    <a class="btn btn-primary mr-3 card-link" href="{{ path('categories_show', {'id': category.id}) }}">show</a>
-                    <a class="btn btn-success mr-3 card-link" href="{{ path('categories_edit', {'id': category.id}) }}">edit</a>
+                    <a class="btn btn-primary mr-3 card-link" href="{{ path('categories_show', {'id': category.id}) }}">Voir</a>
+                    <a class="btn btn-success mr-3 card-link" href="{{ path('categories_edit', {'id': category.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucune catégorie existante</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a class="btn btn-primary mr-3 card-link" href="{{ path('categories_new') }}">Create new</a>
+    <div class="d-block text-center">
+        <a class="btn btn-primary mr-3 card-link" href="{{ path('categories_new') }}">Créer une nouvelle catégorie</a>
+    </div>
 {% endblock %}
