--- a/templates/comment/_delete_form.html.twig
+++ b/templates/comment/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form class="d-inline-block align-bottom card-link" method="post" action="{{ path('delete_comment', {'id': comment_id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_method" value="DELETE">
+    <input type="hidden" name="_method" value="Supprimer">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ comment_id) }}">
-    <button class="btn btn-danger mt-3">Supprimer</button>
+    <button class="btn btn-danger ml-3 mt-3">Supprimer</button>
 </form>
