--- a/templates/events/_form.html.twig
+++ b/templates/events/_form.html.twig
@@ -1,7 +1,14 @@
-{{ form_start(form) }}
+{{ form_start(form,{'attr': {'class': 'mt-3'}}) }}
 	<div class="form-row">
 		<div class="form-group col-md-6">
-    		{{ form_row(form.name) }}
+    		{{ form_label(form.name)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-user"></i>
+                </div>
+	   			{{ form_widget(form.name,{'attr': {'class': 'form-control','placeholder': "Football"}})}}
+	   		</div>
+	   		{{ form_errors(form.name)}}
     	</div>
     </div>
 	<div class="form-row date">
@@ -11,25 +18,56 @@
 	</div>
 	<div class="form-row">
 		<div class="form-group col-md-6">
-    		{{ form_row(form.city) }}
+    		{{ form_label(form.city)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-city"></i>
+                </div>
+	   			{{ form_widget(form.city,{'attr': {'class': 'form-control','placeholder': "Paris"}})}}
+	   		</div>
+	   		{{ form_errors(form.city)}}
     	</div>
 		<div class="form-group col-md-6">
-    		{{ form_row(form.address) }}
+    		{{ form_label(form.address)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-map-marker-alt"></i>
+                </div>
+	   			{{ form_widget(form.address,{'attr': {'class': 'form-control','placeholder': "6 rue de Montmartre"}})}}
+	   		</div>
+	   		{{ form_errors(form.address)}}
     	</div>
     </div>
 	<div class="form-row">
 		<div class="form-group col-md-6">
-    		{{ form_row(form.limite) }}
+    		{{ form_label(form.limite)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-user"></i>
+                </div>
+	   			{{ form_widget(form.limite,{'attr': {'class': 'form-control','placeholder': "5"}})}}
+	   		</div>
+	   		{{ form_errors(form.limite)}}
     	</div>
 	</div>
 	<div class="form-row">
 		<div class="form-group col-md-6">
-    		{{ form_row(form.imageFile) }}
+			<div class="d-block">
+    			{{ form_label(form.imageFile)}}
+    		</div>
+   			{{ form_widget(form.imageFile,{'attr': {'class': 'file-form-type'}})}}
+	   		{{ form_errors(form.imageFile)}}
 		</div>
 	</div>
 	<div class="form-row">
 		<div class="form-group col-md-12">
-    		{{ form_row(form.description) }}
+    		<div class="px-0 col-md-6">
+    		{{ form_label(form.description)}}
+	   		<div class="input-group">
+	   			{{ form_widget(form.description,{'attr': {'class': 'form-control','placeholder': "Description"}})}}
+	   		</div>
+	   		{{ form_errors(form.description)}}
+    		</div>
     	</div>
     </div>
 	<div class="form-row categories">
