--- a/templates/events/edit.html.twig
+++ b/templates/events/edit.html.twig
@@ -1,14 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Events{% endblock %}
+{% block title %}Modifier évènement{% endblock %}
 
 {% block body_id 'edit-event' %}
 
-{% block body_class 'form-style form-style-with-date edit-form' %}
-
 {% block body %}
 <div class="container">
-	<h1 class="text-center mb-5">Edit Events</h1>
+	<h1 class="text-center mb-5">Modifier cet évènement</h1>
     {% include('events/_delete_form.html.twig') with {'event_id': event.id} %}
 
     {{ include('events/_form.html.twig') }}
