--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -11,8 +11,10 @@
 			<div class="col">
 			<h1>Tu galères à trouver quoi faire pendant ton temps libre ?</h1>
 			<p>Collectif est un site qui permet de trouver des évènements partout autour de chez toi !</p>
-			<a href="{{ path('user_registration')}}" class="btn btn-success mbxs">Inscription</a>
-			<p>Pas encore inscrit ? <a href="{{ path('app_login')}}" class="index-connexion">Connectez-vous</a></p>
+			{% if not app.user %}
+				<a href="{{ path('user_registration')}}" class="btn btn-color-alt mbxs">Inscription</a>
+				<p>Déjà inscrit ? <a href="{{ path('app_login')}}" class="index-connexion">Connectez-vous</a></p>
+			{% endif %}
 			</div>
 		</div>
 	</div>
@@ -22,7 +24,7 @@
 		<ul class="index-categories row">
 		{% for item in nbEventByCategory %}
 			<div class="col-sm-4 col-xs-6">
-			<li class="mb-4"><a class="w-100 btn {% if loop.index0 is odd %}btn-primary {% else %} btn-success {% endif %}" href="{{ path('events_category', {category: item.name})}}">{{item.number ~ ' - ' ~ item.name}}</a></li>
+			<li class="mb-4"><a class="w-100 btn index-categories-item" href="{{ path('events_category', {category: item.name})}}"><span class="number-category-event">{{item.number}}</span><span class="category-event">{{item.name}}</span></a></li>
 			</div>
 		{% endfor %}
 		</ul>
