--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,35 +4,76 @@
 
 {% block body_id 'inscription' %}
 
-{% block body_class 'form-style' %}
-
 {% block body %}
 
-<div class="container">
+<div class="container form-wrapper py-4">
 	<h1 class="text-center mb-5">Inscription</h1>
 	{{ form_start(form) }}
 	<div class="form-row">
 		<div class="form-group col-md-6">
-	   		{{ form_row(form.firstname) }}
+			{{ form_label(form.firstname)}}
+	   		{# {{ form_row(form.firstname) }} #}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-user"></i>
+                </div>
+	   			{{ form_widget(form.firstname,{'attr': {'class': 'form-control','placeholder': "Prénom"}})}}
+	   		</div>
+	   		{{ form_errors(form.firstname)}}
 		</div>
 	    <div class="form-group col-md-6">
-	    	{{ form_row(form.lastname) }}
+	    	{{ form_label(form.lastname)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-user"></i>
+                </div>
+	   			{{ form_widget(form.lastname,{'attr': {'class': 'form-control','placeholder': "Nom"}})}}
+	   		</div>
+	   		{{ form_errors(form.lastname)}}
 		</div>
 	</div>
 	<div class="form-row">
 		<div class="form-group col-md-6">
-	    	{{ form_row(form.email) }}
+	    	{{ form_label(form.email)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text far fa-envelope"></i>
+                </div>
+	   			{{ form_widget(form.email,{'attr': {'class': 'form-control','placeholder': "exemple@exemple.com"}})}}
+	   		</div>
+	   		{{ form_errors(form.email)}}
 		</div>
 	    <div class="form-group col-md-6">
-	    	{{ form_row(form.phone) }}
+	    	{{ form_label(form.phone)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-phone"></i>
+                </div>
+	   			{{ form_widget(form.phone,{'attr': {'class': 'form-control','placeholder': "Phone"}})}}
+	   		</div>
+	   		{{ form_errors(form.phone)}}
 	    </div>
 	</div>
 	<div class="form-row">
 		<div class="form-group col-md-6">
-	    	{{ form_row(form.password.first) }}
+	    	{{ form_label(form.password.first)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-key"></i>
+                </div>
+	   			{{ form_widget(form.password.first,{'attr': {'class': 'form-control'}})}}
+	   		</div>
+	   		{{ form_errors(form.password.first)}}
 	    </div>
 	    <div class="form-group col-md-6">
-	    	{{ form_row(form.password.second) }}
+	    	{{ form_label(form.password.second)}}
+	   		<div class="input-group">
+                <div class="input-group-prepend">
+                    <i class="input-group-text fas fa-key"></i>
+                </div>
+	   			{{ form_widget(form.password.second,{'attr': {'class': 'form-control'}})}}
+	   		</div>
+	   		{{ form_errors(form.password.second)}}
 	    </div>
 	</div>
 	    <button type="submit" class="btn btn-primary d-block mx-auto">S'enregistrer</button>
