--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}connexion{% endblock %}
+
+{% block body_id 'connexion' %}
 
 {% block body %}
 
-<div class="container">
-    <h1 class="mb-5 text-center">Connectez-vous !</h1>
+<div class="container connexion-form-wrapper py-4">
+    <h1 class="mb-4 text-center">Connexion</h1>
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -19,13 +21,23 @@
         <div class="form-row">
             <div class="form-group col-md-6 mx-auto">
                 <label for="inputEmail">Email</label>
-                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <i class="input-group-text far fa-envelope"></i>
+                    </div>
+                    <input type="email" value="{{ last_username }}" placeholder="Exemple@exemple.com" name="email" id="inputEmail" class="form-control" required autofocus>
+                </div>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6 mx-auto">
                 <label for="inputPassword">Mot de passe</label>
-                <input type="password" name="password" id="inputPassword" class="form-control" required>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <i class="input-group-text fas fa-key"></i>
+                    </div>
+                    <input type="password" name="password" id="inputPassword" class="form-control" required>
+                </div>
             </div>
         </div>
 
@@ -43,7 +55,7 @@
             </div>
         #}
 
-        <button class="btn btn-primary mx-auto d-block" type="submit">Connexion</button>
+        <button class="btn btn-color mx-auto d-block" type="submit">Connexion</button>
     </form>
 </div>
 {% endblock %}
