--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -4,13 +4,13 @@
 
 {% block body %}
     <div class="container">
-		<h1 class="text-center mb-5">Edit User</h1>
+		<h1 class="text-center mb-5">Modifier un utilisateur</h1>
 
 	    {{ include('user/_delete_form.html.twig') }}
 
 	    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-	    <a href="{{ path('user_index') }}">back to list</a>
+	    <a href="{{ path('user_index') }}">Liste des utilisateurs</a>
 	</div>
 
 {% endblock %}
