--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -10,8 +10,6 @@
             <tr>
                 <th>Id</th>
                 <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
                 <th>Surname</th>
                 <th>Name</th>
                 <th>Phone</th>
@@ -23,23 +21,21 @@
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
                 <td>{{ user.phone }}</td>
                 <td>
-                    <a class="btn btn-primary mr-3 card-link" href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a class="btn btn-success mr-3 card-link" href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+                    <a class="btn btn-primary mr-3 card-link" href="{{ path('user_show', {'id': user.id}) }}">Voir</a>
+                    <a class="btn btn-success mr-3 card-link" href="{{ path('user_edit', {'id': user.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="8">no records found</td>
+                <td colspan="8">Aucun utilisateur trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a class="btn btn-primary mr-3 card-link" href="{{ path('user_new') }}">Create new</a>
+    <a class="btn btn-primary mr-3 card-link" href="{{ path('user_new') }}">Créer un nouvel utilisateur</a>
 {% endblock %}
