--- a/templates/events/_filters.html.twig
+++ b/templates/events/_filters.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(filters, {attr: {class: 'js-filter-form'}}) }}
+{{ form_start(filters, {attr: {class: 'js-filter-form mb-4 mb-lg-0'}}) }}
 	
 	<h2 class="text-center mb-4">Filtres</h2>
 
@@ -16,7 +16,7 @@
     	</div>
     </div>
 	<div class="form-row date">
-		<div class="form-group col-md-9">
+		<div class="form-group col-12">
     		{{ form_row(filters.date) }}
 		</div>
 	</div>
