--- a/templates/events/index.html.twig
+++ b/templates/events/index.html.twig
@@ -8,12 +8,12 @@
 
     <div class="container-fluid js-filter">
         <div class="row">
-            <div class="col-md-3 col-sm-12">
+            <div class="col-lg-3 col-sm-12">
             {% block aside %}
                 {% include 'events/_filters.html.twig' %}
             {% endblock %}
             </div>
-            <div class="col-md-9 col-sm-12">
+            <div class="col-lg-9 col-sm-12">
                 <div class="js-filter-content row">
                     {% include 'events/_events.html.twig' %}
                 </div>
