--- a/templates/participations/participations.html.twig
+++ b/templates/participations/participations.html.twig
@@ -7,12 +7,12 @@
 {% block body %}
     <div class="container-fluid js-filter">
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-lg-3 col-sm-12">
             {% block aside %}
                 {% include 'events/_filters.html.twig' %}
             {% endblock %}
             </div>
-            <div class="col-sm-9">
+            <div class="col-lg-9 col-sm-12">
                 <div class="js-filter-content row">
                     {% include 'events/_events.html.twig' %}
                 </div>
