--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Kevin LEONARD">
-    <meta name="description" content="{% block description '' %}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Kevin LEONARD">
+        <meta name="description" content="{% block description '' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
-    <title>Collectif - {% block title '' %}</title>
+        <title>Collectif - {% block title '' %}</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="shortcut icon" href="images/tangata.ico" type="image/x-icon">
+        
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
+    </head>
+    <body class="position-relative">
+    <header class="position-relative">
+        {% block header %}
+            {% include 'includes/_header.html.twig' %}
+        {% endblock %}
+    </header>
 
-    {% block stylesheets %}
-    {{ encore_entry_link_tags('app') }}
+    <main id="{% block body_id '' %}" class="{% block body_class '' %}">
+        {% block filters %}
+        {% endblock %}
+        {% block body %}
+        {% endblock %}
+    </main>
+
+    <footer class="position-absolute w-100">
+        {% block footer %}
+            {% include 'includes/_footer.html.twig' %}
+        {% endblock %}
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+    <script src="https://kit.fontawesome.com/b4537116b5.js" crossorigin="anonymous" defer></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" defer></script>
+
+    {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
     {% endblock %}
-</head>
-<body>
-<header>
-    {% block header %}
-    {% endblock %}
-</header>
 
-<main id="{% block body_id '' %}">
-    {% block body %}
-    {% endblock %}
-</main>
-
-<footer>
-    {% block footer %}
-    {% endblock %}
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-
-{% block javascripts %}
-{{ encore_entry_script_tags('app') }}
-{% endblock %}
-
-</body>
+    </body>
 </html>
