--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,20 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexController!{% endblock %}
+{% block title %}Accueil{% endblock %}
+
+{% block body_id 'index' %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="container index-intro mbsm">
+		<div class="row">
+			<div class="col">
+			<h1>Tu galères à trouver quoi faire pendant ton temps libre ?</h1>
+			<p>Collectif est un site qui permet de trouver des évènements partout autour de chez toi !</p>
+			{% if not app.user %}
+				<a href="{{ path('user_registration')}}" class="btn btn-color-alt mbxs">Inscription</a>
+				<p>Déjà inscrit ? <a href="{{ path('app_login')}}" class="index-connexion">Connectez-vous</a></p>
+			{% endif %}
+			</div>
+		</div>
+	</div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Programmes/wamp/www/collectif/src/Controller/IndexController.php'|file_link(0) }}">src/Controller/IndexController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Programmes/wamp/www/collectif/templates/index/index.html.twig'|file_link(0) }}">templates/index/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<div class="container">
+		<h2 class="text-center mb-4">{{nbEvent}} évènements ont déjà été crée !</h2>
+		<ul class="index-categories row">
+		{% for item in nbEventByCategory %}
+			<div class="col-sm-4 col-xs-6">
+			<li class="mb-4"><a class="w-100 btn index-categories-item" href="{{ path('events_category', {category: item.name})}}"><span class="number-category-event">{{item.number}}</span><span class="category-event">{{item.name}}</span></a></li>
+			</div>
+		{% endfor %}
+		</ul>
+		<h2 class="text-center mb-4">Voici les 2 derniers évènements crées</h2>
+        <div class="row">
+            {% include 'events/_events.html.twig' with { 'events': lastEvents } only %}
+        </div>
+	</div>
+
 {% endblock %}
