change icon create event

--- a/templates/events/_form.html.twig
+++ b/templates/events/_form.html.twig
@@ -4,7 +4,7 @@
     		{{ form_label(form.name)}}
 	   		<div class="input-group">
                 <div class="input-group-prepend">
-                    <i class="input-group-text fas fa-user"></i>
+                    <i class="input-group-text fas fa-handshake"></i>
                 </div>
 	   			{{ form_widget(form.name,{'attr': {'class': 'form-control','placeholder': "Football"}})}}
 	   		</div>
