add meta descriptino

--- a/templates/events/index.html.twig
+++ b/templates/events/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Voici la liste de tous les évènements disponibles sur Collectif{% endblock %}
+
 {% block title %}Evènements{% endblock %}
 
 {% block body_id 'events' %}
