--- a/templates/events/new.html.twig
+++ b/templates/events/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block description %}Crées ton propre évènements !{% endblock %}
+
 {% block title %}Nouvel évènement{% endblock %}
 
 {% block body_id 'new-event' %}
