--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block description %}Collectif est un site qui permet de trouver des évènements partout autour de chez toi !{% endblock %}
+
 {% block title %}Accueil{% endblock %}
 
 {% block body_id 'index' %}
