--- a/templates/participations/participations.html.twig
+++ b/templates/participations/participations.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block description %}Retrouves les évènements que tu as rejoins !{% endblock %}
+
 {% block title %}Participations{% endblock %}
 
 {% block body_id 'participations' %}
