--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block description %}Connecte toi et rejoins ou crée différents évènements !{% endblock %}
+
 {% block title %}connexion{% endblock %}
 
 {% block body_id 'connexion' %}
