--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block description %}Inscris toi et rejoint la famille collectif !{% endblock %}
+
 {% block title %}Inscription{% endblock %}
 
 {% block body_id 'inscription' %}
