correct block description events

--- a/templates/events/index.html.twig
+++ b/templates/events/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Voici la liste de tous les évènements disponibles sur Collectif{% endblock %}
+{% block description %}Voici la liste de tous les évènements disponibles sur Collectif{% endblock %}
 
 {% block title %}Evènements{% endblock %}
 
